<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="1920dp"
            android:layout_height="1080dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.502"
            app:srcCompat="@drawable/bluebg" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="411dp"
            android:layout_height="888dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        app:cardCornerRadius="100dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="12dp">

                            <TextView
                                android:id="@+id/book_id_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1"
                                android:textColor="#000"
                                android:textSize="40sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/book_title_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/patientName1"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toEndOf="@+id/book_id_txt"
                                app:layout_constraintTop_toTopOf="@+id/book_id_txt" />

                            <TextView
                                android:id="@+id/book_gender_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/genderMale"
                                android:textColor="#000"
                                android:textSize="16sp"
                                app:layout_constraintStart_toEndOf="@+id/book_title_txt"
                                app:layout_constraintTop_toTopOf="@+id/book_id_txt" />

                            <TextView
                                android:id="@+id/book_age_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/age1"
                                android:textColor="#000"
                                android:textSize="16sp"
                                app:layout_constraintStart_toEndOf="@+id/book_gender_txt"
                                app:layout_constraintTop_toTopOf="@+id/book_id_txt" />

                            <TextView
                                android:id="@+id/book_author_txt"
                                android:layout_width="329dp"
                                android:layout_height="53dp"
                                android:text="@string/condition1"
                                app:layout_constraintStart_toStartOf="@+id/book_title_txt"
                                app:layout_constraintTop_toBottomOf="@+id/book_title_txt" />

                            <TextView
                                android:id="@+id/book_pages_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="40dp"
                                android:text="120"
                                android:textSize="18sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>